# ws25-watermark

./: .flake8  .gitignore  Makefile  README.md  RIsc-v.md  pyproject.toml  replacer.py  script.py  x86.md
.github/workflows/: ci.yml  coverage-report.yml
docs/: HowToWatermarker.md  README.md  RIsc-v.md  testing.md  x86.md
docs/Research_work/: RIsc-v.md
docs/architecture/: ArchRework.md  Architecture.md  Watermarker_Strategy.drawio
docs/architecture/drawio/: Watermark_new.drawio  Watermark_old.drawio  Watermarker_Strategy.drawio
example_bins/: cat.elf  echo.elf  hell  ls.elf  sqlite3.elf  strncpy
riscv_watermark/: decoder.py  encoder.py  exceptions.py  main.py  poctest.py  replacer.py  utils.py
riscv_watermark/elf/: ElfWorker.py  __init__.py
riscv_watermark/tests/: test_main.py  test_programs_functionality.py
riscv_watermark/watermarkers/: __init__.py  fabric.py  factory.py  interface.py
riscv_watermark/watermarkers/addi_watermarker/: module.py
riscv_watermark/watermarkers/eq_instr_watermarker/: add_converter.py  dictionaries.py  module.py
riscv_watermark/watermarkers/stack_watermarker/: module.py
riscv_watermark/watermarkers/zerofier_watermark/: module.py
riscv_watermark/watermarkers/zerofier_watermarker/: add_converter.py  dictionaries.py  module.py
tests/: test_cli.py  test_for_qemu.py  test_section_handler.py  test_service.py  test_watermarkers_init.py
tests/data/: test_riscv.elf  test_x86.elf
watermark_framework/: __init__.py  architecture.py
watermark_framework/cli/: main.py
watermark_framework/core/: service.py
watermark_framework/io/: __init__.py  section_handler.py
watermark_framework/watermarkers/: __init__.py  interface.py
watermark_framework/watermarkers/eq_instr/: add_converter.py  module.py
